# hack-ai-11-2023

./: .env-example  .gitattributes  .gitignore  README.MD  docker-compose.yml  nginx.jetfork.conf  resources.sh
src/backend/: .gitattributes  .gitignore  Dockerfile  main.py  pyproject.toml
src/backend/app/: factory.py  lifespan.py
src/backend/app/api/: __init__.py  movies.py
src/backend/app/core/: config.py  logger.py
src/backend/utils/: helper.py  top.py
src/backend/utils/nearest_queries/: __init__.py
src/backend/utils/nearest_queries/resources/: faiss_ft_index.index  ind2queries_ft.json
src/backend/utils/spelling_checker/: sym_spell_servicer.py  symspell_checker.py
src/backend/utils/spelling_checker/mount_files/keyboard_dicts/: eng.json  ru.json
src/backend/utils/top_model/: backfill.py  top.py
src/frontend/: .prettierignore  Dockerfile  index.html  package.json  tsconfig.json
src/frontend/src/: App.tsx
src/frontend/src/components/CartInfo/: CartInfo.tsx
src/frontend/src/components/Header/: Header.tsx
src/frontend/src/components/Uploader/: Uploader.tsx
src/frontend/src/pages/: Loading.tsx  Products.tsx  ProductsWithDevice.tsx  SearchInput.tsx  colors.ts
src/frontend/src/providers/: env.ts
